Refactor index.html with new features and styles
Updated the HTML structure and styles, added a new Install Velu button, and modified the special thanks message.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <div class="container">
     <header>
       <h1>Lucid</h1>
-      <p>Special thanks to Burt Cocaine and klazo all my homies hate lenny parsonage</p>
+      <p>Special thanks to Burt, Install velu (free roblox external)</p>
       <div class="scroll-hint" id="scrollHint">▼ SCROLL ▼</div>
     </header>
 
@@ -239,7 +239,7 @@
     // Install Velu
     document.getElementById('installVeluBtn').addEventListener('click', () => {
       const link = document.createElement('a');
-      link.href = 'velu.rar'; // File must exist in same directory
+      link.href = 'valu.rar'; // File must exist in same directory
       link.download = 'velu.rar';
       document.body.appendChild(link);
       link.click();
@@ -319,3 +319,4 @@
   </script>
 </body>
 </html>
+
